--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "^8.0|^9.0|^10.0",
         "doctrine/dbal": "^3.6"
     },
     "require-dev": {
@@ -82,5 +82,6 @@
         }
     },
     "minimum-stability": "dev",
+    "version": "0.0.1",
     "prefer-stable": true
 }
